• mundhenk-logik/skript.latex   · Der Anfang vom 2. Kapitel.
git-svn-id: https://svn.lug-jena.de/uni-skripte@921 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -214,6 +214,10 @@
 \newcommand*{\fib}{\mathit{fib}}
 \newcommand*{\sonst}{\text{ sonst}}
 
+% Zur Vereinheitlichung und leichteren Anpassbarkeit des Zeichens nach einem
+% Quantor im 2. Kapitel
+\newcommand*{\quantsep}{~}
+
 \newcommand*{\cA}{\mathcal{A}}    % Schreibschrift A
 \newcommand*{\cB}{\mathcal{B}}    % Schreibschrift B
 \newcommand*{\cM}{\mathcal{M}}    % Schreibschrift M
@@ -2905,9 +2909,9 @@ Die Resolution als Theorie ist also auch vollständig und korrekt.
    \item Eigenschaft $M(x,y)$ mit der Bedeutung \glqq{}$x$ mag $y$\grqq
    \item Individuen $a$ bedeutet \glqq{}ich\grqq{}, $b$ bedeutet \glqq{}meine Frau\grqq{} und
     $c$ bedeutet \glqq{}Peter\grqq
-   \item Quantoren über Variablen: "`$\forall x\colon P(x)$"' heißt \glqq{}für alle $x$
+   \item Quantoren über Variablen: "`$\forall x\quantsep P(x)$"' heißt \glqq{}für alle $x$
     gilt Eigenschaft $P$\grqq{}
-     (im Bsp.: $\forall x\colon (M(x,a) \rightarrow M(x,b))$)
+     (im Bsp.: $\forall x\quantsep(M(x,a) \rightarrow M(x,b))$)
   \end{itemize}
 \end{bsp}
 
@@ -2924,7 +2928,7 @@ Die Resolution als Theorie ist also auch vollständig und korrekt.
   $G$ und $E$ sind Eigenschaften, $f$ ist eine Funktion
 
   Damit können wir nun die Aussage formal ausdrücken:
-  $\forall x\colon (G(x) \wedge E(x))\rightarrow \neg E(f(x))$
+  $\forall x\quantsep (G(x) \wedge E(x))\rightarrow \neg E(f(x))$
 
   Also folgt aus $G(b)$ und $E(b)$, dass $\neg E\big(f(b)\big)$ gilt.
 \end{bsp}
@@ -2932,34 +2936,43 @@ Die Resolution als Theorie ist also auch vollständig und korrekt.
 \begin{defini}[Quantoren]
   \index{Quatoren}
   $\forall$ bezeichnet man als \emph{Allquantor} und $\exists$ als
-  \emph{Existenzquantor}. $\forall x\colon P(x)$ bedeutet "`für alle $x$
-  gilt $P(x)$"' und $\exists x\ P(x)$ bedeutet \glqq{}es gibt
+  \emph{Existenzquantor}. $\forall x\quantsep P(x)$ bedeutet "`für alle $x$
+  gilt $P(x)$"' und $\exists x\quantsep P(x)$ bedeutet \glqq{}es gibt
   (mindestens) ein $x$ für das $P(x)$ gilt\grqq{}.
 \end{defini}
 
+Beispiele:\\
 \begin{tabular}{l@{\qquad}l}
-  Alle Vierbeiner können laufen & $\forall x\colon V(x) \rightarrow L(x)$\\
-  Es gibt Tiere, die Vierbeiner sind & $\exists x\colon T(x) \wedge V(x)$\\
-  Also gibt es Tiere, die laufen können & $\exists x\colon T(x) \wedge L(x)$
+  Alle Vierbeiner können laufen & $\forall x\quantsep V(x) \rightarrow L(x)$\\
+  Es gibt Tiere, die Vierbeiner sind & $\exists x\quantsep T(x) \wedge V(x)$\\
+  Also gibt es Tiere, die laufen können & $\exists x\quantsep T(x) \wedge L(x)$
 \end{tabular}
 
-Die \glqq{}Sprache\grqq{} der Theorien 1.~Ordnung:
-\begin{description}
- \item[Zeichen:] logische Verknüpfungszeichen wie $\neg$, $\rightarrow$,
-  $\wedge$, $\vee$, $\leftrightarrow$,\\
-  \emph{Variablensymbole} wie $x_{1}, x_{2}, x_{3}, \dotsc$,\\
-  \emph{Konstantensymbole} $a_{1}, a_{2}, a_{2},\dotsc$,\\
-  \emph{Prädikatensymbole} $A_{k}^{n}$, wobei $n\in\N^+$ die Stelligkeit und $k\in\N^+$,
-  z.\,B. $A_{1}^{1}, A_{1}^{2}, A_{1}^{3}, A_{2}^{5}$,\\
-  \emph{Funktionensymbole} $f_{k}^{n}$, $n\in\N^+$ ist die Stelligkeit, $k\in\N^+$ und\\
-  \emph{Quantoren} $\forall$ und $\exists$
- \item[Terme:]
+Die \glqq{}Sprache\grqq{} der Theorien 1.~Ordnung besteht aus folgenden
+Elementen:
+\begin{enumerate}
+ \item Zeichen:
+  \begin{enumerate}
+   \item logische Verknüpfungszeichen wie $\neg$, $\rightarrow$,
+    $\wedge$, $\vee$, $\leftrightarrow$,
+   \item \emph{Variablensymbole} wie $x_{1}, x_{2}, x_{3}, \dotsc$,
+   \item \emph{Konstantensymbole} $a_{1}, a_{2}, a_{2},\dotsc$,
+   \item \emph{Prädikatensymbole} $A_{k}^{n}$, wobei $n\in\N^+$ die
+    Stelligkeit und $k\in\N^+$ ein Index zur Unterscheidung verschiedender
+    Prädikatensymbole ist, z.\,B. $A_{1}^{1}, A_{1}^{2}, A_{1}^{3}, A_{2}^{5}$,
+   \item \emph{Funktionensymbole} $f_{k}^{n}$, $n\in\N^+$ ist die Stelligkeit
+    der Funktion und $k\in\N^+$ ein Index zur Unterscheidung verschiedender
+    Funktionen ist und
+   \item \emph{Quantoren} $\forall$ und $\exists$
+  \end{enumerate}
+
+ \item Terme:
   \begin{enumerate}
    \item Jedes Variablen- oder Konstantensymbol ist ein \emph{Term}
-   \item Wenn $t_{1},\dotsc,t_{n}$ Terme sind, dann ist
+   \item Wenn $t_{1},\dotsc,t_{n}$ Terme sind, dann ist auch
     $f^{n}_{k}(t_{1},\dotsc,t_{n})$ ein Term
   \end{enumerate}
-\end{description}
+\end{enumerate}
 
 \begin{bsp}
   $x_{15}$ ist ein Variablensymbol, $a_{3}$ ist ein Konstantensymbol,
@@ -2972,31 +2985,33 @@ Die \glqq{}Sprache\grqq{} der Theorien 1.~Ordnung:
   (t_{1},\dotsc,t_{n})$ eine \emph[index=Formel!atomare]{atomare Formel}.
 \end{defini}
 
-\begin{defini}[Formeln]
+\begin{defini}[Formeln]\label{def:formeln}
   \begin{enumerate}
    \item Jede atomare Formel ist eine \emph{Formel}.
    \item Wenn $\alpha$ und $\beta$ Formeln sind, dann sind auch $(\neg
-    \alpha), (\alpha\rightarrow\beta)$ und $(\forall x_{i} ~ \alpha)$
+    \alpha), (\alpha\rightarrow\beta)$ und $(\forall x_{i}\quantsep \alpha)$
     Formeln.
 
     \textit{[$\wedge$, $\vee$ $\leftrightarrow$ können wie bisher als
-    abkürzende Schreibweise gebraucht werden. $(\exists x_{i} ~ \alpha)$
-    ist Abkürzung für $(\neg (\forall x_{i} ~ (\neg \alpha)))$]}
+    abkürzende Schreibweise gebraucht werden. $(\exists x_{i}\quantsep \alpha)$
+    ist Abkürzung für $(\neg (\forall x_{i}\quantsep (\neg \alpha)))$]}
 
     \glqq{}Überflüssige\grqq{} Klammern können zur Vereinfachung der Schreibweise
     weggelassen werden.
   \end{enumerate}
 \end{defini}
 
-\begin{bsp}
-  $\big(\forall x_{2}~ A_{1}^{1}(x_{2}) \rightarrow A_{0}^{2}(x_{2},
-  f_{1}^{1}(x_{2})) \big)$\\
-  $A_{1}^{1}(x_{2}) \rightarrow (\forall x_{3} ~ A_{1}^{2}(x_{1},x_{2}))$\\
-  $(\exists x_{1} ~ A_{1}^{2}(x_{1},x_{2})) \rightarrow (\forall x_{1} ~
-  (\neg A_{2}^{2}(x_{1},x_{2})))$
-\end{bsp}
+Beispiele für Formeln:
+\begin{itemize}
+ \item $\big(\forall x_{2}\quantsep A_{1}^{1}(x_{2}) \rightarrow
+  A_{0}^{2}(x_{2}, f_{1}^{1}(x_{2})) \big)$
+ \item $A_{1}^{1}(x_{2}) \rightarrow (\forall x_{3}\quantsep
+  A_{1}^{2}(x_{1},x_{2}))$
+ \item $(\exists x_{1}\quantsep A_{1}^{2}(x_{1},x_{2})) \rightarrow (\forall
+  x_{1}\quantsep (\neg A_{2}^{2}(x_{1},x_{2})))$
+\end{itemize}
 
-In $(\forall x_{i} ~ \alpha)$ ist $\alpha$ der \emph{Gültigkeitsbereich}
+In $(\forall x_{i}\quantsep \alpha)$ ist $\alpha$ der \emph{Gültigkeitsbereich}
 des Quantors \glqq$\forall x_{i}$\grqq{}. Eine Variable $y$, die im
 Gültigkeitsbereich eines Quantors $\forall y$ liegt oder die Teil des
 Quantors sind, heißt \emph[index=Variable!gebundene]{gebunden}. Falls
@@ -3006,11 +3021,11 @@ eine Variable nicht gebunden ist, dann heißt sie
 \begin{bsp}
   In der Formel $A_{1}^{2}(x_{1},x_{2})$ sind $x_{1}$ und $x_{2}$ freie
   Variablen. In der Formel $A_{1}^{2}(x_{1},x_{2}) \rightarrow (\forall
-  x_{2}~ A_{1}^{1}(x_{2}))$ ist die Variable $x_{1}$ frei und $x_{2}$ ist
+  x_{2}\quantsep A_{1}^{1}(x_{2}))$ ist die Variable $x_{1}$ frei und $x_{2}$ ist
   im ersten Teil frei, im zweiten Teil aber durch den Allquantor
   gebunden.
 
-  In $(\forall x_{2} ~ A_{1}^{2}(x_{1},x_{2}) \rightarrow (\forall x_{2} ~
+  In $(\forall x_{2}\quantsep A_{1}^{2}(x_{1},x_{2}) \rightarrow (\forall x_{2}\quantsep
   A_{1}^{1}(x_{2})))$ ist $x_{1}$ frei und $x_{2}$ gebunden.
   Achtung: jedes Vorkommen von $x_2$ ist durch einen anderen Quantor gebunden!
 \end{bsp}
@@ -3019,7 +3034,7 @@ Eine Variable ist \emph[index=Variable!freie]{frei} in $\alpha$, falls
 alle Vorkommen der Variablen in $\alpha$ frei sind. (analog: gebunden)
 \begin{bsp}
 In der Formel
-$(\forall x_1 ~ ( \forall x_2 ~ A^2_1(x_1,x_2)) \rightarrow  A^3_1(x_1,x_2,x_3))$
+$(\forall x_1\quantsep ( \forall x_2\quantsep A^2_1(x_1,x_2)) \rightarrow  A^3_1(x_1,x_2,x_3))$
 sind alle Vorkommen von $x_1$ gebunden
 und alle Vorkommen von $x_3$ frei.
 Also ist $x_1$ in dieser Formel gebunden, und $x_3$ ist frei.
@@ -3028,8 +3043,8 @@ Also ist $x_2$ in dieser Formel weder frei noch gebunden.
 \end{bsp}
 
 Eine Formel heißt \emph[index=Formel!geschlossene]{geschlossen},
-falls alle Variablen in der Formel gebunden sind.
-(D.\,h. es gibt kein freies Vorkommen einer Variablen.)
+falls alle Variablen in der Formel gebunden sind -- d.\,h. es gibt kein freies
+Vorkommen einer Variablen.
 
 Der \emph[index=Formel!Abschluss einer]{Abschluss}
 einer Formel $\alpha$ entsteht aus $\alpha$,
@@ -3038,11 +3053,12 @@ ein Allquantor an den Anfang der Formel geschrieben wird.
 
 \begin{bsp}
 In der Formel
-$(\forall x_1 ~ ( \forall x_2 ~ A^2_1(x_1,x_2)) \rightarrow  A^3_1(x_1,x_2,x_3))$
+$\bigl(\forall x_1\quantsep ( \forall x_2\quantsep A^2_1(x_1,x_2)) \rightarrow
+  A^3_1(x_1,x_2,x_3)\bigr)$
 kommen $x_2$ und $x_3$ frei vor.
 Also ist
-$(\forall x_2 ~ (\forall x_3 ~
-        (\forall x_1 ~ ( \forall x_2 ~ A^2_1(x_1,x_2)) \rightarrow  A^3_1(x_1,x_2,x_3))))$
+$(\forall x_2 \quantsep (\forall x_3\quantsep
+        (\forall x_1 \quantsep ( \forall x_2 \quantsep A^2_1(x_1,x_2)) \rightarrow  A^3_1(x_1,x_2,x_3))))$
 der Abschluss der Formel.
 \end{bsp}
 
@@ -3050,12 +3066,15 @@ der Abschluss der Formel.
 $\alpha[x/t]$ entsteht aus $\alpha$ durch Ersetzen aller freien Vorkommen
 der Variablen $x$ durch den Term $t$.
 \begin{bsp}
-  $A_{1}^{2}(x_{1},x_{2})[x_{1}/f_{1}^{1}(x_{2})] =
-  A_{1}^{2}(f_{1}^{1}(x_{2}), x_{2})$ \\
-  $( A_{1}^{2}(x_{1},x_{2}) \rightarrow
-  (\forall x_2~ A_{1}^{2}(x_{1},x_{2})))[x_{1}/f_{1}^{1}(x_{2})] =
-  A_{1}^{2}(x_{1},f_{1}^{1}(x_{2})) \rightarrow
-  (\forall x_2~ A_{1}^{2}(x_{1},x_{2}))$
+  \begin{itemize}
+   \item $A_{1}^{2}(x_{1},x_{2})[x_{1}/f_{1}^{1}(x_{2})] =
+       A_{1}^{2}(f_{1}^{1}(x_{2}), x_{2})$
+
+   \item $( A_{1}^{2}(x_{1},x_{2}) \rightarrow
+    (\forall x_2\quantsep A_{1}^{2}(x_{1},x_{2})))[x_{1}/f_{1}^{1}(x_{2})] =
+    A_{1}^{2}(x_{1},f_{1}^{1}(x_{2})) \rightarrow
+    (\forall x_2\quantsep A_{1}^{2}(x_{1},x_{2}))$
+  \end{itemize}
 \end{bsp}
 
 
@@ -3065,16 +3084,17 @@ Gültigkeitsbereich eines Quantors für eine Variable in $t$ liegt.
 
 \begin{bsp}
   $x_{2}$ ist frei für $x_{1}$ in $A_{1}^{1}(x_{1})$, nicht jedoch in
-  $\forall x_{2}$ $A_{1}^{1}(x_{1})$.
+  $\forall x_{2}\quantsep A_{1}^{1}(x_{1})$.
 \end{bsp}
 
 \section{Interpretation von Formeln}
 
 \begin{bsp}
+  Betrachten wir folgende Formeln:
   \begin{enumerate}
    \item $A_{1}^{2}(x_{1},x_{2})$
-   \item $\forall x_{2} A_{1}^{2}(x_{1},x_{2})$
-   \item $\exists x_{1}\ \forall x_{2} A_{1}^{2}(x_{1},x_{2})$
+   \item $\forall x_{1}\quantsep A_{1}^{2}(x_{1},x_{2})$
+   \item $\exists x_{1}\quantsep \forall x_{2}\quantsep A_{1}^{2}(x_{1},x_{2})$
   \end{enumerate}
 
   Für die Grundmenge $\N$ und $A_{1}^{2}$ mit der Bedeutung $\leq$
@@ -3083,29 +3103,31 @@ Gültigkeitsbereich eines Quantors für eine Variable in $t$ liegt.
    \item $x_{1}\leq x_{2}$
    \item Für alle $x_{1}\in\N$ gilt $x_{1}\leq x_{2}$, d.\,h. $x_{1}=0$
    \item Es gibt ein $x_{1}\in\N$, so dass für alle $x_{2}\in\N$ gilt:
-    $x_{1}\leq x_{2}$ ($\N$ besitzt ein untere Schranke)
+    $x_{1}\leq x_{2}$, d.\,h. $\N$ besitzt ein untere Schranke
   \end{enumerate}
 \end{bsp}
 
 % 23. Mai 2006
 
-Eine \emph{Interpretation} $\mathcal{M}$ besteht aus
-\begin{itemize}
- \item einer nicht leeren Grundmenge $D$,
+\begin{defini}[Interpretation]
+  Eine \emph{Interpretation} $\mathcal{M}$ besteht aus
+  \begin{itemize}
+   \item einer nicht leeren Grundmenge $D$,
 
- \item einer Abbildung von der Menge alle Funktionssymbole in die Menge
-  aller Funktionen auf $D$, die jedem Funktionssymbol $f_{k}^{n}$ eine
-  $n$-stellige Funktion $(f_{k}^{n})^{\mathcal{M}}\colon D^{n} \rightarrow D$
-  zuordnet,
+   \item einer Abbildung von der Menge alle Funktionssymbole in die Menge
+    aller Funktionen auf $D$, die jedem Funktionssymbol $f_{k}^{n}$ eine
+    $n$-stellige Funktion $(f_{k}^{n})^{\mathcal{M}}\colon D^{n} \rightarrow D$
+    zuordnet,
 
- \item einer Abbildung von der Menge aller Konstantensymbole in die Menge
-  $D$, die jedem Konstantensymbol $a_{k}$ ein Element $(a_{k})^{\mathcal{M}}\in D$
-  zuordnet und
+   \item einer Abbildung von der Menge aller Konstantensymbole in die Menge
+    $D$, die jedem Konstantensymbol $a_{k}$ ein Element $(a_{k})^{\mathcal{M}}\in D$
+    zuordnet und
 
- \item einer Abbildung von der Menge aller Prädikatensymbole in die
-  Potenzmenge von $\bigcup_{i\in\N} D^{i}$, die jedem Prädikatensymbol
-  $A_{k}^{n}$ eine Menge $(A_{k}^{n})^{\mathcal{M}}\subseteq D^{n}$ zuordnet.
-\end{itemize}
+   \item einer Abbildung von der Menge aller Prädikatensymbole in die
+    Potenzmenge von $\bigcup_{i\in\N} D^{i}$, die jedem Prädikatensymbol
+    $A_{k}^{n}$ eine Menge $(A_{k}^{n})^{\mathcal{M}}\subseteq D^{n}$ zuordnet.
+  \end{itemize}
+\end{defini}
 
 $\Sigma_{\mathcal{M}}$ bezeichne die Menge aller Funktionen von der Menge aller
 Variablensymbole nach $D$, $\Sigma_{\mathcal{M}} = \big\{s\big| s\colon
@@ -3134,7 +3156,7 @@ $s$ erfüllt die Formel $\alpha$, falls
     \text{$s$ erfüllt $\beta$ nicht oder $s$ erfüllt $\gamma$} &\text{und\ }
     \alpha=(\beta\rightarrow\gamma)\\
     \multicolumn{2}{l}{\text{jedes $s'$ mit $s'(x_{j})=s(x_{j})$ für alle $j\ne i$ erfüllt
-    $\beta$} \text{\ und\ }a=(\forall x_{i}~\beta)}
+    $\beta$} \text{\ und\ }a=(\forall x_{i}\quantsep\beta)}
   \end{cases}
 \end{gather*}
 
@@ -3142,7 +3164,7 @@ $s$ erfüllt die Formel $\alpha$, falls
 
 \begin{bsp}
   Wir betrachten die Formel
-      $\alpha_0=\exists x_{2} ~ A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}), x_{3})$.
+      $\alpha_0=\exists x_{2}\quantsep A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}), x_{3})$.
 
   Die Interpretation $\cM_0$ wird angegeben durch eine
   nicht leere Grundmenge $D$ und die Interpretation der
@@ -3156,41 +3178,37 @@ $s$ erfüllt die Formel $\alpha$, falls
   \end{itemize}
 
   In der Interpretation $\cM_0$ hat
-    $\exists x_{2} ~ A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}), x_{3})$
-  die Bedeutung $\exists z ~ x\cdot z=y$.
+    $\exists x_{2}\quantsep A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}), x_{3})$
+  die Bedeutung $\exists z\quantsep x\cdot z=y$.
 
   Als nächstes legen wir eine
   Variablenbelegung $s_{1}$ fest.
   Sie weist jedem Variablensymbol $x_i$ einen Wert aus der Grundmenge zu.
-
-  { \centering
-
-  \begin{tabular}{r*{6}{|c}}
-    & $x_{1}$ & $x_{2}$ & $x_{3}$ & $x_{4}$ & $x_{5}$ & \ldots{}\\
-    \hline
-    $s_{1}(x_{i})$ & 2 & 3 & 8 & 9 & 10 & \ldots{}
-  \end{tabular}
-
-  }
-
-  In der Interpretation $\cM_0$ mit Variablenbelegung $x_1$ hat
-    $\exists x_{2} ~ A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}), x_{3})$
-  die Bedeutung $\exists z \colon 2\cdot z=8$.
+  \begin{gather*}
+    \begin{array}{r*{6}{|c}}
+      & x_{1} & x_{2} & x_{3} & x_{4} & x_{5} & \dotso\\
+      \hline
+      s_{1}(x_{i}) & 2 & 3 & 8 & 9 & 10 & \dotso
+    \end{array}
+  \end{gather*}
+  In der Interpretation $\cM_0$ mit Variablenbelegung $s_1$ hat
+    $\exists x_{2} \quantsep A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}), x_{3})$
+  die Bedeutung $\exists z \quantsep 2\cdot z=8$.
 
   Nun wollen wir feststellen, ob
-    $\exists x_{2} ~  A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}), x_{3})$
+    $\exists x_{2}\quantsep  A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}), x_{3})$
   von $s_1$ erfüllt wird. Dazu wenden wir (wiederholt)
   obige Definitionen an.
 
   \begin{tabular}{p{5mm}cp{0.85\textwidth}}
   \multicolumn{3}{l}{$s_{1}$ erfüllt
-          $(\exists x_{2} ~ A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}),x_{3}) )$} \\
+          $(\exists x_{2}\quantsep A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}),x_{3}) )$} \\
     & $\Leftrightarrow$ &
          $s_{1}$ erfüllt
-       $\neg(\forall x_{2} ~ \neg A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}),x_{3}))$ \\
+       $\neg(\forall x_{2}\quantsep \neg A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}),x_{3}))$ \\
     & $\Leftrightarrow$ &
           $s_{1}$ erfüllt nicht
-         $(\forall x_{2} ~\neg A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}),x_{3}))$  \\
+         $(\forall x_{2}\quantsep\neg A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}),x_{3}))$  \\
     & $\Leftrightarrow$ &
           nicht jede Variablenbelegung $s$ mit
            $s(x_{i}) = s_{1}(x_{i})$ für alle $i\ne2$ erfüllt
@@ -3217,37 +3235,34 @@ $s$ erfüllt die Formel $\alpha$, falls
   wobei $s(x_{1})=s_{1}(x_{1})=2$ und $s(x_{3})=s_{1}(x_{3})=8$.
   Wir wählen $s$ so, dass $s(x_{2})=4$.
   Also
+  \begin{gather*}
+    \begin{array}{r*{6}{|c}}
+      & x_{1} & x_{2} & x_{3} & x_{4} & x_{5} & \dotso\\
+      \hline
+      s(x_{i}) & 2 & 4 & 8 & 9 & 10 & \dotso
+    \end{array}
+  \end{gather*}
 
-  { \centering
-
-  \begin{tabular}{r*{6}{|c}}
-    & $x_{1}$ & $x_{2}$ & $x_{3}$ & $x_{4}$ & $x_{5}$ & \ldots{}\\
-    \hline
-    $s(x_{i})$ & 2 & 4 & 8 & 9 & 10 & \ldots{}
-  \end{tabular}
-
-  }
-
-  Für $s$ gilt: $2\cdot 4 = s(x_1)\cdot s(x_2) = s(x_3)=8$, also
-    erfüllt die Variablenbelegung $s$
-       $((f_{1}^{2})^{\cM_0}(s(x_{1}),s(x_{2})), s(x_{3}))\in (A_{1}^{2})^{\cM_0}$.
-  Die Variablenbelegung $s$ erfültt die Bedingungen
+  Für die Variablenbelegung $s$ gilt: $2\cdot 4 = s(x_1)\cdot s(x_2) =
+  s(x_3)=8$, also erfüllt sie die Bedingungen
+       $((f_{1}^{2})^{\cM_0}(s(x_{1}),s(x_{2})), s(x_{3}))\in (A_{1}^{2})^{\cM_0}$
+  und
       \glqq$s(x_{i}) = s_{1}(x_{i})$ für alle $i\ne2$\grqq{}.
   Folglich ist die Aussage
   \glqq{}jede Variablenbelegung $s$ mit \ldots{} erfüllt  nicht
        $((f_{1}^{2})^{\cM_0}(s(x_{1}),s(x_{2})), s(x_{3}))\in (A_{1}^{2})^{\cM_0}$\grqq{}
   falsch.
-  Dehalb ist die Negation der Aussage wahr,
+  Deshalb ist die Negation der Aussage wahr,
   und diese Negation ist genau die Aussage $\star$.
   Da $\star$ äquivalent zur Aussage \glqq{}$s_1$ erfüllt $\alpha_0$\grqq{} ist,
   gilt: $s_{1}$ erfüllt die Formel
-       $(\exists x_{2} ~ A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}),x_{3}))$.
+       $(\exists x_{2}\quantsep A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}),x_{3}))$.
 
   Für jede Variablenbelegung $s_2$ mit $s_2(x_1)=0$ und $s_2(x_3)\ne0$ gilt:
   $s_2$ erfüllt $\alpha_0$ nicht (unter $\cM_0$).
   In der Interpretation $\cM_0$ mit Variablenbelegung $s_2$ hat
-    $\exists x_{2} ~ A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}), x_{3})$
-  die Bedeutung $\exists z ~ 0\cdot z\ne0$.
+    $\exists x_{2}\quantsep A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}), x_{3})$
+  die Bedeutung $\exists z\quantsep 0\cdot z\ne0$.
 \end{bsp}
 
 \begin{defini}[Modell]
@@ -3256,6 +3271,9 @@ $s$ erfüllt die Formel $\alpha$, falls
     Eine Formel $\alpha$ ist \emph{wahr} unter der Interpretation $\cM$,
     falls
     $\alpha$ von jeder Variablenbelegung $s\in\Sigma_{\cM}$ erfüllt wird.
+
+    Schreibweise für \glqq{}$\alpha$ ist wahr unter $\cM$\grqq{}:
+    $\Mmodels \alpha$.
 
    \item
     $\alpha$ ist \emph{falsch} unter $\cM$,
@@ -3290,69 +3308,66 @@ und $(f^2_1)^{\cM_3} = ((a,b) \mapsto a+b)$
 ist $\alpha_0$ wahr.
 \end{bsp}
 
-Schreibweise für \glqq{}$\alpha$ ist wahr unter $\cM$\grqq{}: ~~~$\Mmodels ~\alpha$ .
-
-
 Wichtige Eigenschaften von Formeln
 in Bezug auf die Begriffe wahr und falsch (ohne Beweise):
-\begin{itemize}
- \item[(E1)] $\alpha$~ ist wahr unter $\cM$  ~~gdw.~~  $\neg \alpha$~ ist falsch unter $\cM$.
+\begin{itemize}[(E1)]
+ \item $\alpha$ ist wahr unter $\cM$ \gdw $\neg \alpha$ ist falsch unter $\cM$.
 
- \item[(E2)] Es gilt höchstens eins von ~$\Mmodels \alpha$~ und ~$\Mmodels\neg\alpha$.
+ \item Es gilt höchstens eins von $\Mmodels \alpha$ und $\Mmodels\neg\alpha$.
 
- \item[(E3)] Aus ~$\Mmodels\alpha$~ und ~$\Mmodels \alpha\rightarrow\beta$~
-  folgt ~$\Mmodels\beta$.
+ \item Aus $\Mmodels\alpha$ und $\Mmodels \alpha\rightarrow\beta$
+  folgt $\Mmodels\beta$.
 
- \item[(E4)] $\alpha\rightarrow\beta$~ ist falsch unter $\cM$ ~~gdw.~~ \\
+ \item $\alpha\rightarrow\beta$ ist falsch unter $\cM$ \gdw \\
   $\alpha$ ist wahr unter $\cM$ und $\beta$ ist falsch unter $\cM$.
 
- \item[(E5)] $s$ erfüllt $\alpha\wedge\beta$ ~~gdw.~~
+ \item $s$ erfüllt $\alpha\wedge\beta$ \gdw
   $s$ erfüllt $\alpha$ und $s$ erfüllt $\beta$. \\
-  $s$ erfüllt $\alpha\vee\beta$ ~~gdw.~~
+  $s$ erfüllt $\alpha\vee\beta$ \gdw
   $s$ erfüllt $\alpha$ oder $s$ erfüllt $\beta$. \\
-  $s$ erfüllt $\alpha\leftrightarrow\beta$ ~~gdw.~~
+  $s$ erfüllt $\alpha\leftrightarrow\beta$ \gdw
   $s$ erfüllt $\alpha\rightarrow\beta$ und $s$ erfüllt $\beta\rightarrow\alpha$. \\
-  $s$ erfüllt $(\exists x_j~ \beta)$ ~~gdw.~~\\
+  $s$ erfüllt $(\exists x_j\quantsep \beta)$ \gdw\\
   \rule{4mm}{0mm}
   es gibt $s'\in\Sigma_{\cM}$ mit $s'(x_i)=s(x_i)$ für alle $i\ne j$
   und $s'$ erfüllt $\beta$.
 
- \item[(E6)] $\Mmodels \alpha$ ~~gdw.~~ $\Mmodels (\forall x_i ~ \alpha)$.
+ \item $\Mmodels \alpha$ \gdw $\Mmodels (\forall x_i\quantsep \alpha)$.
 
              (Für den Abschluss $\beta$ von $\alpha$ gilt also:
-                     $\Mmodels \beta$ ~gdw.~ $\Mmodels \alpha$.)
+                     $\Mmodels \beta$ \gdw $\Mmodels \alpha$.)
 
- \item[(E7)] Eine Instanz einer Tautologie erhält man,
+ \item Eine Instanz einer Tautologie erhält man,
              indem man die Aussagevariablen einer Tautologie durch
              Formeln ersetzt (gleiche Aussagevariablen
              durch gleiche Formeln).
 
              Es gilt: Jede Instanz einer Tautologie ist wahr unter jeder Interpretation.
 
- \item[(E8)] Sei $V$ eine Menge von Variablen, die alle freien Variablen von $\alpha$
+ \item Sei $V$ eine Menge von Variablen, die alle freien Variablen von $\alpha$
   enthält.
   $s$ und $s'$ seien Variablenbelegungen in $\Sigma_{\cM}$.
 
   Wenn $s(x_i)=s'(x_i)$ für alle $x_i\in V$, dann gilt:
   \begin{center}
-    $s$ erfüllt $\alpha$ gdw. $s'$ erfüllt $\alpha$.
+    $s$ erfüllt $\alpha$ \gdw $s'$ erfüllt $\alpha$.
   \end{center}
 
- \item[(E9)] Für jede geschlossene Formel $\alpha$ und jede Interpretation $\cM$ gilt:
+ \item Für jede geschlossene Formel $\alpha$ und jede Interpretation $\cM$ gilt:
   \begin{gather*}
-    \Mmodels \alpha \text{~oder~} \Mmodels \neg \alpha \ \ .
+    \Mmodels \alpha \text{~oder~} \Mmodels \neg \alpha
   \end{gather*}
 
- \item[(E10)] Sei $t$ frei für $x_i$ in $\alpha$.
+ \item Sei $t$ frei für $x_i$ in $\alpha$.
   Dann gilt für alle $\cM$:
   \begin{gather*}
-    \Mmodels (\forall x_i ~\alpha ) \rightarrow \alpha[x_i/t].
+    \Mmodels (\forall x_i\quantsep \alpha ) \rightarrow \alpha[x_i/t].
   \end{gather*}
 
- \item[(E11)] Wenn $x_i$ in $\alpha$ nicht frei vorkommt, dann gilt für alle $\cM$
+ \item Wenn $x_i$ in $\alpha$ nicht frei vorkommt, dann gilt für alle $\cM$
   \begin{gather*}
-    \Mmodels~ (\forall x_i ~\alpha\rightarrow\beta) \rightarrow
-       (\alpha \rightarrow (\forall x_i ~\beta)).
+    \Mmodels (\forall x_i\quantsep \alpha\rightarrow\beta) \rightarrow
+       (\alpha \rightarrow (\forall x_i\quantsep \beta)).
   \end{gather*}
 \end{itemize}
 
@@ -3361,9 +3376,9 @@ in Bezug auf die Begriffe wahr und falsch (ohne Beweise):
    \item
     Eine Formel $\alpha$ heißt \emph{gültig},
     falls
-    ~$\Mmodels ~\alpha$~ für jede Interpretation $\cM$ gilt.
+    $\Mmodels \alpha$ für jede Interpretation $\cM$ gilt.
 
-    Schreibweise: $\models \alpha$ .
+    Schreibweise: $\models \alpha$.
 
    \item
     $\alpha$ heißt \emph{erfüllbar},
@@ -3372,13 +3387,11 @@ in Bezug auf die Begriffe wahr und falsch (ohne Beweise):
   \end{itemize}
 \end{defini}
 
-\vspace{3ex}
-
 Offensichtlich gilt:
 \begin{itemize}
- \item $\alpha$ ist gültig ~~gdw.~~ $\neg\alpha$ ist nicht erfüllbar.
+ \item $\alpha$ ist gültig \gdw $\neg\alpha$ ist nicht erfüllbar.
 
- \item $\alpha$ ist erfüllbar ~~gdw.~~ $\neg\alpha$ ist nicht gültig.
+ \item $\alpha$ ist erfüllbar \gdw $\neg\alpha$ ist nicht gültig.
 \end{itemize}
 
 
@@ -3387,34 +3400,37 @@ Offensichtlich gilt:
 
 \begin{defini}[Theorie 1.~Ordnung]
   Eine \emph{Theorie 1.~Ordnung} $\mathrm{K}$ besteht aus
-  \begin{enumerate}
-   \item[1.] \textit{Formeln}
+  \begin{enumerate}[1.]
+   \item \textit{Formeln}
 
-    Formeln sind definiert wie oben beschrieben.
+    Die Definition der Formeln ist gemäß \autoref{def:formeln}.
     Theorien können sich durch die zugelassenen Variablen-, Konstanten-,
      Funktions- und Prädikatensymbole unterscheiden.
 
-   \item[2.] \textit{logischen Axiomen}
+   \item \textit{logischen Axiomen}
 
     Sie entstehen aus den Axiomenschemata (A1)--(A5)
-    durch Einsetzen von bel. Formeln für $\alpha$, $\beta$ und $\gamma$.
-    \begin{description}
-     \item[(A1)] $\alpha \rightarrow (\beta \rightarrow \alpha)$
-     \item[(A2)] $\left(\alpha \rightarrow (\beta \rightarrow \gamma)\right) \rightarrow
-      \left(\left(\alpha\rightarrow \beta\right) \rightarrow \left(\alpha \rightarrow \gamma\right) \right)$
-     \item[(A3)] $\left( \left(\neg\beta\right) \rightarrow \left(\neg\alpha\right)\right) \rightarrow
-      \left( \left( \left(\neg\beta\right) \rightarrow \alpha\right) \rightarrow \beta\right)$
-     \item[(A4)] $(\forall x_i~\alpha) \rightarrow \alpha[x_i/t]$,
+    durch Einsetzen von beliebigen Formeln für $\alpha$, $\beta$ und $\gamma$.
+    \begin{enumerate}[({A}1)]
+     \item $\alpha \rightarrow (\beta \rightarrow \alpha)$
 
+     \item $\left(\alpha \rightarrow (\beta \rightarrow \gamma)\right) \rightarrow
+      \left(\left(\alpha\rightarrow \beta\right) \rightarrow \left(\alpha \rightarrow \gamma\right) \right)$
+
+     \item $\left( \left(\neg\beta\right) \rightarrow \left(\neg\alpha\right)\right) \rightarrow
+      \left( \left( \left(\neg\beta\right) \rightarrow \alpha\right) \rightarrow \beta\right)$
+
+     \item $(\forall x_i\quantsep\alpha) \rightarrow \alpha[x_i/t]$,
       wobei $t$ ein Term ist, der frei für $x_i$ in $\alpha$ ist.
-     \item[(A5)] $(\forall x_i ~\alpha\rightarrow\beta) \rightarrow
-      (\alpha \rightarrow (\forall x_i ~\beta))$,
+
+     \item $(\forall x_i\quantsep \alpha\rightarrow\beta) \rightarrow
+      (\alpha \rightarrow (\forall x_i\quantsep \beta))$,
       falls $x_i$ in $\alpha$ nicht frei vorkommt.
-    \end{description}
+    \end{enumerate}
       Die Axiomenschemata sind also die drei bereits aus der Aussagenlogik bekannten
       und zwei weitere zur Beschreibung von Eigenschaften des Allquantors.
 
-   \item[3.] \textit{zusätzlichen Axiomen}
+   \item \textit{zusätzlichen Axiomen}
 
       Die Menge der zusätzlichen Axiome kann leer sein.
       Eine Theorie 1.~Ordnung ohne zusätzliche Axiome wird
@@ -3423,29 +3439,22 @@ Offensichtlich gilt:
       die zusätzliche Axiome zur Beschreibung von Eigenschaften der natürlichen
       Zahlen besitzt.
 
-   \item[4.] \textit{Ableitungsregeln}
+   \item \textit{Ableitungsregeln}
 
-    \begin{description}
+    \begin{mdescription}
      \item[(MP)] modus ponens:
-      $\begin{array}{c}
-        \alpha, \alpha\rightarrow\gamma \\ \hline
-        \gamma
-      \end{array}
-      $
+      $\displaystyle\frac{\alpha, \alpha\rightarrow\gamma}{\gamma}$
      \item[(Gen)] Generalisierung:
-      $
-      \begin{array}{c}
-        \alpha \\ \hline
-        (\forall x_i ~\alpha)
-      \end{array}
-      $ für ein beliebiges Variablensymbol $x_i$
-    \end{description}
+      $\displaystyle\frac{\alpha}{(\forall x_{i}\quantsep \alpha)}$
+      für ein beliebiges Variablensymbol $x_i$
+    \end{mdescription}
   \end{enumerate}
 \end{defini}
 
 Jede Theorie 1.~Ordnung ist eine formale Theorie.
 Damit sind auch die Begriffe Beweis und Theorem definiert.
-Ein \emph[indexrand=Modell einer Theorie 1.Ordnung]{Modell einer Theorie $\mathrm{K}$ 1.Ordnung}
+Ein \emph[indexrand=Modell einer Theorie 1.~Ordnung]{Modell einer Theorie
+$\mathrm{K}$ 1.~Ordnung}
 ist ein Modell für die Menge aller (logischen und zusätzlichen) Axiome von $\mathrm{K}$.
 Aus (E3) und (E6) folgt, dass
 jedes Modell von $\mathrm{K}$ auch ein Modell
@@ -3454,23 +3463,23 @@ aller Theoreme von $\mathrm{K}$ ist.
 
 \begin{bsp}
   Ein Beweis für
-  $\alpha, (\forall x_1 ~\alpha)\rightarrow \beta \vdash (\forall x_1 ~ \beta)$.
-
-  \begin{tabular}{lll}
-    (1) & $\alpha$ & Hyp \\[1ex]
-       (2) & $(\forall x_1 ~\alpha)$ & Gen (1) \\[1ex]
-       (3) & $(\forall x_1 ~\alpha)\rightarrow \beta$ & Hyp \\[1ex]
-       (4) & $\beta$ & MP (2), (3) \\[1ex]
-       (5) & $(\forall x_1 ~\beta)$ & Gen (4)
-  \end{tabular}
+  $\alpha, (\forall x_1 \quantsep\alpha)\rightarrow \beta \vdash (\forall x_1\quantsep \beta)$.
+  \begin{align*}
+    (1)\quad & \alpha & \text{Hypothese}\\
+    (2)\quad & (\forall x_1\quantsep \alpha) & \text{Gen (1)}\\
+    (3)\quad & (\forall x_1\quantsep \alpha)\rightarrow \beta & \text{Hypothese}\\
+    (4)\quad & \beta & \text{MP (2), (3)} \\
+    (5)\quad & (\forall x_1\quantsep \beta) & \text{Gen (4)}
+  \end{align*}
 \end{bsp}
 
 An diesem Beispiel sehen wir, dass sich das Deduktionstheorem
 nicht direkt auf Theorien 1.~Ordnung übertragen lässt.
 Im obigen Beispiel finden beide Anwendungen von (Gen) statt auf Formeln,
 die aus $\alpha$ abgeleitet wurden.
-Deshalb gilt \underline{nicht}:
-$(\forall x_1 ~\alpha)\rightarrow \beta \vdash \alpha \rightarrow (\forall x_1 ~\beta)$.
+Deshalb gilt \textit{nicht}:
+$(\forall x_1\quantsep \alpha)\rightarrow \beta \vdash \alpha \rightarrow
+(\forall x_1\quantsep \beta)$.
 
 
 
@@ -3487,25 +3496,24 @@ Ohne zusätzliche Axiome können ausschließlich gültige Formeln bewiesen werde
   \begin{center}
     Wenn $\xvdash{K} \alpha$, dann ist $\alpha$ gültig.
   \end{center}
-\end{satz}
 
 \begin{proof}
   Alle Axiome sind gültig (E7 für A1--A3, E10 für A4 und E11 für A5).
   Der modus ponens und die Generalisierung erhalten die Gültigkeit (E3
   und E6).
 \end{proof}
+\end{satz}
 
 
-
-Das alte Deduktionstheorem gilt nicht für Theorien 1.~Ordnung.
+Das alte Deduktionstheorem gilt \textit{nicht} für Theorien 1.~Ordnung.
 Betrachte dazu folgenden Beweis.
 %
 \begin{align*}
   (1)\quad & A^1_1(x_1)                   & \text{Hypothese}\\
-  (2)\quad &( \forall x_{1}~ A^1_1(x_1) ) & \text{Gen (1)}
+  (2)\quad &( \forall x_{1}\quantsep A^1_1(x_1) ) & \text{Gen (1)}
 \end{align*}
 Mit dem alten Deduktionstheorem folgt:
-$\vdash A^1_1(x_1) \rightarrow(\forall x_{1}~A^1_1(x_1))$.
+$\vdash A^1_1(x_1) \rightarrow(\forall x_{1}\quantsep A^1_1(x_1))$.
 Diese Formel ist aber nicht gültig!
 (Man nehme eine Interpretation $\cM$ mit Grundmenge $\N$
 und $(A^1_1)^{\cM}=\{a\in\N \colon a \text{ ist ungerade} \}$.)
@@ -3532,62 +3540,61 @@ Herleitung aus $\Gamma$. $\beta_{i}$ \emph[indexrand=hängt\ldots{} ab]
 
 
 \begin{satz}[Deduktionstheorem für Theorien 1.~Ordnung]\label{Deduktionstheorem2}
-  Sei $\alpha\notin\Gamma$ und $\Gamma,\alpha~\vdash~\beta$,
+  Sei $\alpha\notin\Gamma$ und $\Gamma,\alpha\vdash\beta$,
   wobei $\beta_{1},\dotsc,\beta_{k}$ eine
   Herleitung von $\beta$ aus $\Gamma\cup\{\alpha\}$ mit folgender
   Eigenschaft:
 \begin{quote}
-wenn $\beta_{i}=(\forall x_{j} ~ \beta_{q})$ durch Anwendung
+wenn $\beta_{i}=(\forall x_{j}\quantsep \beta_{q})$ durch Anwendung
   der Generalisierungsregel auf $\beta_{q}$ entsteht, dann gilt (1)
   $\beta_{q}$ hängt nicht von $\alpha$ ab oder (2) $x_{j}$ kommt nicht
   frei in $\alpha$ vor.
 \end{quote}
-  Dann gilt $\Gamma ~\vdash~ \alpha\rightarrow\beta$.
-\end{satz}
+  Dann gilt $\Gamma \vdash \alpha\rightarrow\beta$.
 
-\begin{proof}[von~\autoref{Deduktionstheorem2}]
-
+\begin{proof}
   Induktion über die Länge $i$ der Herleitung.
-  \begin{description}
+  \begin{mdescription}
    \item[IA] $i=1$, $\beta_{i}$ ist ein Axiom oder aus
     $\Gamma\cup\{\alpha\}$ (analog zum Beweis des Deduktionstheorems in der
     Aussagenlogik, \autoref{al-Deduktionstheorem}).
 
-   \item[IS]
+   \item[IS]~
     \begin{faelle}
      \item $\beta_{i+1}$ ist ein Axiom, aus $\Gamma\cup\{\alpha\}$ oder
       entsteht durch modus ponens (analog zum Beweis des Deduktionstheorems in der
       Aussagenlogik)
 
      \item $\beta_{i+1}$ entsteht durch Generalisierung, d.\,h.
-      $\beta_{i+1}=(\forall x_{j} ~ \beta_{q})$.
+      $\beta_{i+1}=(\forall x_{j}\quantsep \beta_{q})$.
 
-      \begin{enumerate}[(1)]
+      \begin{faelle}
        \item $\beta_{q}$ hängt nicht von $\alpha$ ab: dann gilt
         \begin{align*}
           \Gamma &\vdash \beta_{q}\\
-          \Gamma &\vdash (\forall x_{j} ~ \beta_{q}) &\text{Gen}\\
-          \Gamma &\vdash (\forall x_{j} ~ \beta_{q}) \rightarrow
-             (\alpha\rightarrow (\forall x_{j} ~ \beta_{q})) &\text{A1}\\
-          \Gamma &\vdash \alpha \rightarrow (\forall x_{j} ~ \beta_{q})
+          \Gamma &\vdash (\forall x_{j}\quantsep \beta_{q}) &\text{Gen}\\
+          \Gamma &\vdash (\forall x_{j}\quantsep \beta_{q}) \rightarrow
+             (\alpha\rightarrow (\forall x_{j}\quantsep \beta_{q})) &\text{A1}\\
+          \Gamma &\vdash \alpha \rightarrow (\forall x_{j}\quantsep \beta_{q})
              &\text{MP}
         \end{align*}
 
        \item $x_{j}$ kommt nicht frei in $\alpha$ vor: dann gilt
         \begin{align*}
           \Gamma &\vdash \alpha \rightarrow \beta_{q} &\text{IV}\\
-          \Gamma &\vdash (\forall x_{j} ~ \alpha \rightarrow \beta_{q})
+          \Gamma &\vdash (\forall x_{j}\quantsep \alpha \rightarrow \beta_{q})
              &\text{Gen}\\
-          \Gamma &\vdash (\forall x_{j} ~  \alpha \rightarrow \beta_{q})
-             \rightarrow (\alpha \rightarrow (\forall x_{j} ~ \beta_{q}))
+          \Gamma &\vdash (\forall x_{j}\quantsep \alpha \rightarrow \beta_{q})
+             \rightarrow (\alpha \rightarrow (\forall x_{j}\quantsep \beta_{q}))
              &\text{A5} \\
-          \Gamma & \alpha \rightarrow (\forall x_{j} ~ \beta_{q})
+          \Gamma & \alpha \rightarrow (\forall x_{j}\quantsep \beta_{q})
              &\text{MP}
         \end{align*}
-      \end{enumerate}
+      \end{faelle}
     \end{faelle}
-  \end{description}
+  \end{mdescription}
 \end{proof}
+\end{satz}
 
 \begin{bsp}
   Ein Beweis mit Benutzung des Deduktionstheorems.
